--- a/index.html
+++ b/index.html
@@ -1,135 +1,167 @@
-<!doctype html>
-<html lang="ko">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>사토시의지갑 (클린 스타트)</title>
-  <style>
-    body{background:#0d1117;color:#e6edf3;font-family:system-ui,AppleSDGothic,Arial,sans-serif;margin:0}
-    .wrap{max-width:1100px;margin:40px auto;padding:24px;background:#161b22;border-radius:16px}
-    h1{margin:0 0 20px;color:#58a6ff;text-align:center}
-    .toolbar{display:flex;gap:8px;justify-content:center;margin:10px 0 20px}
-    input{flex:1;min-width:320px;padding:10px;border-radius:8px;border:none}
-    button{padding:10px 14px;border:none;border-radius:8px;background:#238636;color:#fff;cursor:pointer}
-    button.alt{background:#444}
-    table{width:100%;border-collapse:collapse;margin-top:10px}
-    th,td{border:1px solid #30363d;padding:8px;text-align:center}
-    th{background:#1f242d}
-    .cols{display:grid;grid-template-columns:1fr 1fr;gap:16px;margin-top:16px}
-    ul{margin:8px 0;padding-left:18px}
-    .up{color:#2ecc71}.down{color:#e74c3c}
-  </style>
-</head>
-<body>
-<div class="wrap">
-  <h1>사토시의지갑 (클린 스타트)</h1>
+  setInterval(()=>loadList('/api/bithumb','#bithumb-top-box'),5000);
+</script>
 
-  <div class="toolbar">
-    <button id="tab-upbit">업비트</button>
-    <button id="tab-bithumb" class="alt">빗썸</button>
-  </div>
-
-  <div class="toolbar">
-    <input id="search-input" placeholder="코인명/심볼 (예: BTC 또는 KRW-BTC)" />
-    <button id="search-btn">검색</button>
-  </div>
-
-  <table id="result-table">
-    <thead>
-      <tr><th>기준가</th><th>시장상태</th><th>위험도</th><th>상승예상</th><th>하락예상</th><th>매수1</th><th>매수2</th><th>매도1</th><th>매도2</th><th>손절</th></tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>-</td><td>-</td><td>-</td><td>-</td><td>-</td>
-        <td>-</td><td>-</td><td>-</td><td>-</td><td>-</td>
-      </tr>
-    </tbody>
-  </table>
-
-  <div class="cols">
-    <div>
-      <h3>실시간 급등 (업비트)</h3>
-      <ul id="upbit-top-box"><li>-</li></ul>
+<!-- ===== 타점 요약 박스 ===== -->
+<div id="signalBox" style="display:none;margin:12px 0 4px 0;">
+  <div style="display:flex;gap:10px;flex-wrap:wrap;">
+    <div style="padding:10px 12px;background:#111;border:1px solid #2a2a2a;border-radius:8px;">
+      <div style="opacity:.7;font-size:12px;margin-bottom:6px;">기준가</div>
+      <div id="p-base" style="font-weight:700;font-size:18px;">-</div>
     </div>
-    <div>
-      <h3>실시간 급등 (빗썸)</h3>
-      <ul id="bithumb-top-box"><li>-</li></ul>
+    <div style="padding:10px 12px;background:#0f1a12;border:1px solid #1e3a2f;border-radius:8px;">
+      <div style="opacity:.7;font-size:12px;margin-bottom:6px;">매수1 (-1.5%)</div>
+      <div id="p-buy1" style="font-weight:700;font-size:18px;">-</div>
+    </div>
+    <div style="padding:10px 12px;background:#0f1a12;border:1px solid #1e3a2f;border-radius:8px;">
+      <div style="opacity:.7;font-size:12px;margin-bottom:6px;">매수2 (-2.5%)</div>
+      <div id="p-buy2" style="font-weight:700;font-size:18px;">-</div>
+    </div>
+    <div style="padding:10px 12px;background:#1b1320;border:1px solid #3a2548;border-radius:8px;">
+      <div style="opacity:.7;font-size:12px;margin-bottom:6px;">매도1 (+1.5%)</div>
+      <div id="p-sell1" style="font-weight:700;font-size:18px;">-</div>
+    </div>
+    <div style="padding:10px 12px;background:#1b1320;border:1px solid #3a2548;border-radius:8px;">
+      <div style="opacity:.7;font-size:12px;margin-bottom:6px;">매도2 (+3%)</div>
+      <div id="p-sell2" style="font-weight:700;font-size:18px;">-</div>
+    </div>
+    <div style="padding:10px 12px;background:#211313;border:1px solid #4a2626;border-radius:8px;">
+      <div style="opacity:.7;font-size:12px;margin-bottom:6px;">손절 (-3.5%)</div>
+      <div id="p-stop" style="font-weight:700;font-size:18px;">-</div>
     </div>
   </div>
+  <div id="p-symbol" style="margin-top:6px;opacity:.7;font-size:12px;"></div>
 </div>
+<!-- ===== /타점 요약 박스 ===== -->
 
 <script>
-const REFRESH_MS = 5000;
-const $ = (s)=>document.querySelector(s);
-const fmtPct = n => !isFinite(n) ? '-' : (n>0?'+':'') + Number(n).toFixed(2) + '%';
-const fmtKRW = x => !isFinite(x) ? '-' : Number(x).toLocaleString('ko-KR');
+// ---- 유틸
+const fmt = (n) => Number(n).toLocaleString("ko-KR");
+let CURRENT_EXCHANGE = "UPBIT";
 
-function tick(p){ if(p>=2000000)return 1000;if(p>=1000000)return 500;if(p>=500000)return 100;
-  if(p>=100000)return 50;if(p>=10000)return 10;if(p>=1000)return 1;if(p>=100)return 0.1;if(p>=10)return 0.01;return 0.001;}
-const rTick=(pr)=>{const t=tick(pr);return Math.round(pr/t)*t;}
+// 버튼 클릭시 거래소 변경
+document.querySelectorAll("button").forEach(btn=>{
+  if (btn.textContent.includes("업비트")) btn.addEventListener("click", ()=>{CURRENT_EXCHANGE="UPBIT"; refreshAll();});
+  if (btn.textContent.includes("빗썸"))  btn.addEventListener("click", ()=>{CURRENT_EXCHANGE="BITHUMB"; refreshAll();});
+});
 
-function pickRate(o){for(const k of ['ratePercent','fluctate_rate_24H','signed_change_rate','changeRate']){const v=Number(o?.[k]);if(isFinite(v))return k==='signed_change_rate'?v*100:v;}return NaN;}
+// 검색창/버튼 요소
+const $q = document.querySelector('input[type="text"]');
+const $searchBtn = Array.from(document.querySelectorAll('button')).find(b=>b.textContent.includes('검색'));
 
-async function loadList(path, boxId){
-  try{
-    const r = await fetch(path,{cache:'no-store'});
-    const j = await r.json();
-    const box = $(boxId); box.innerHTML='';
-    if(!j.ok || !j.items?.length){ box.innerHTML='<li>-</li>'; return; }
-    j.items.forEach(it=>{
-      const pct = pickRate(it);
-      const name = it.name || it.symbol || '-';
-      const li = document.createElement('li');
-      li.innerHTML = `${name} <span class="${pct>=0?'up':'down'}">${fmtPct(pct)}</span>`;
-      box.appendChild(li);
-    });
-  }catch{ $(boxId).innerHTML='<li>-</li>'; }
+// 박스 요소
+const $box   = document.getElementById("signalBox");
+const $symEl = document.getElementById("p-symbol");
+const $base  = document.getElementById("p-base");
+const $b1    = document.getElementById("p-buy1");
+const $b2    = document.getElementById("p-buy2");
+const $s1    = document.getElementById("p-sell1");
+const $s2    = document.getElementById("p-sell2");
+const $st    = document.getElementById("p-stop");
+
+// 급등 리스트
+const $lists = Array.from(document.querySelectorAll("ul, ol"));
+const $upbitList   = $lists[0];
+const $bithumbList = $lists[1];
+
+// ---- API 로더
+async function loadUpbit() {
+  const r = await fetch("/api/upbit");
+  if (!r.ok) throw new Error("UPBIT API " + r.status);
+  return r.json();
+}
+async function loadBithumb() {
+  const r = await fetch("/api/bithumb");
+  if (!r.ok) throw new Error("BITHUMB API " + r.status);
+  return r.json();
 }
 
-function activeEx(){ return $('#tab-bithumb').classList.contains('on') ? 'BITHUMB' : 'UPBIT'; }
-function normalize(q){ const U=q.toUpperCase().trim(); if(!U) return null; return U.startsWith('KRW-')?{sym:U.slice(4),up:`${U}`}:{sym:U,up:`KRW-${U}`}; }
+// ---- 급등 코인 리스트 렌더링
+function renderGainers($target, items, label) {
+  if (!$target) return;
+  $target.innerHTML = "";
+  if (!items?.length) {
+    $target.innerHTML = `<li>- (${label} 데이터 없음)</li>`;
+    return;
+  }
+  const top = [...items].sort((a,b)=>(Number(b.changePct)||0)-(Number(a.changePct)||0)).slice(0,20);
+  top.forEach(x=>{
+    const name = x.name || x.symbol || "-";
+    const pct  = Number(x.changePct||0).toFixed(2);
+    const li = document.createElement("li");
+    li.innerHTML = `${name} <span style="opacity:.6">+${pct}%</span>`;
+    $target.appendChild(li);
+  });
+}
 
-async function quote(resolved, ex){
-  if(!resolved) return null;
-  if(ex==='BITHUMB'){
-    const r=await fetch(`/api/bithumb`,{cache:'no-store'}); const j=await r.json();
-    const it = j.items?.find(x=>x.symbol?.toUpperCase()===resolved.sym);
-    if(!it) return null; return {exchange:'BITHUMB', price:Number(it.price), changeRate:Number(it.ratePercent)};
-  }else{
-    const r=await fetch(`https://api.upbit.com/v1/ticker?markets=${encodeURIComponent(resolved.up)}`,{cache:'no-store'});
-    const j=await r.json(); if(!Array.isArray(j)||!j.length) return null; const t=j[0];
-    return {exchange:'UPBIT', price:Number(t.trade_price), changeRate:Number(t.signed_change_rate)*100};
+// ---- 타점 계산
+function renderSignals(coin) {
+  if (!coin) { $box.style.display="none"; return; }
+  const price = Number(coin.price||coin.close||0);
+  if (!price) { $box.style.display="none"; return; }
+
+  const buy1 = (price * 0.985).toFixed(1);
+  const buy2 = (price * 0.975).toFixed(1);
+  const sell1= (price * 1.015).toFixed(1);
+  const sell2= (price * 1.03 ).toFixed(1);
+  const stop = (price * 0.965).toFixed(1);
+
+  $base.textContent = fmt(price);
+  $b1.textContent   = fmt(buy1);
+  $b2.textContent   = fmt(buy2);
+  $s1.textContent   = fmt(sell1);
+  $s2.textContent   = fmt(sell2);
+  $st.textContent   = fmt(stop);
+
+  const label = coin.name || coin.symbol || "-";
+  $symEl.textContent = `${label} · ${CURRENT_EXCHANGE === "UPBIT" ? "업비트" : "빗썸"}`;
+  $box.style.display = "block";
+}
+
+// ---- 검색
+function pickCoin(items, keyword) {
+  if (!items?.length) return null;
+  const kw = (keyword||"").trim().toUpperCase();
+  if (!kw) return items[0];
+  return items.find(x=>{
+    const name = (x.name||"").toUpperCase();
+    const sym  = (x.symbol||"").toUpperCase();
+    return name.includes(kw) || sym.includes(kw);
+  }) || items[0];
+}
+
+// ---- 전체 갱신
+async function refreshAll() {
+  try {
+    const upbit = await loadUpbit();
+    renderGainers($upbitList, upbit.items, "업비트");
+    if (CURRENT_EXCHANGE === "UPBIT") {
+      const coin = pickCoin(upbit.items, $q?.value);
+      renderSignals(coin);
+    }
+  } catch(e) {
+    if ($upbitList) $upbitList.innerHTML = `<li>- (업비트 데이터 없음)</li>`;
+    if (CURRENT_EXCHANGE==="UPBIT") { $box.style.display="none"; }
+  }
+
+  try {
+    const bith = await loadBithumb();
+    renderGainers($bithumbList, bith.items, "빗썸");
+    if (CURRENT_EXCHANGE === "BITHUMB") {
+      const coin = pickCoin(bith.items, $q?.value);
+      renderSignals(coin);
+    }
+  } catch(e) {
+    if ($bithumbList) $bithumbList.innerHTML = `<li>- (빗썸 점검중)</li>`;
+    if (CURRENT_EXCHANGE==="BITHUMB") { $box.style.display="none"; }
   }
 }
 
-function levels(price,chg){
-  const buy1=rTick(price*0.985), buy2=rTick(price*0.97), sell1=rTick(price*1.015), sell2=rTick(price*1.03), stop=rTick(price*0.965);
-  const ar=Math.abs(chg||0); let risk=3; if(ar<2)risk=1; else if(ar<4)risk=2; else if(ar<8)risk=3; else if(ar<12)risk=4; else risk=5;
-  const state=chg>0?'상승':(chg<0?'하락':'중립'), up=chg>0?'상승 지속 유력':'기술적 반등 구간', dn=chg<0?'하락 지속 유의':'당일 조정 가능';
-  return {buy1,buy2,sell1,sell2,stop,risk,state,up,dn};
-}
-
-function fill(q,lv){
-  const t = $('#result-table'); const cells = t.querySelectorAll('tbody tr td');
-  const data=[fmtKRW(q.price),lv.state,String(lv.risk),lv.up,lv.dn,fmtKRW(lv.buy1),fmtKRW(lv.buy2),fmtKRW(lv.sell1),fmtKRW(lv.sell2),fmtKRW(lv.stop)];
-  [...cells].forEach((td,i)=> td.textContent=data[i] ?? td.textContent);
-}
-
-async function run(){
-  const q = $('#search-input').value || '';
-  const ex = activeEx();
-  const res = normalize(q);
-  const qt = await quote(res, ex); if(!qt) return;
-  fill(qt, levels(qt.price, qt.changeRate));
-}
-
-$('#tab-upbit').onclick=()=>{$('#tab-bithumb').classList.remove('on');};
-$('#tab-bithumb').onclick=()=>{$('#tab-bithumb').classList.add('on');};
-$('#search-btn').onclick=(e)=>{e.preventDefault();run();};
-$('#search-input').addEventListener('keydown',e=>{if(e.key==='Enter'){e.preventDefault();run();}});
-
-loadList('/api/upbit','#upbit-top-box'); loadList('/api/bithumb','#bithumb-top-box');
-setInterval(()=>loadList('/api/upbit','#upbit-top-box'),5000);
-setInterval(()=>loadList('/api/bithumb','#bithumb-top-box'),5000);
+// ---- 실행
+if ($searchBtn) $searchBtn.addEventListener("click", refreshAll);
+if ($q) $q.addEventListener("keydown", (e)=>{ if (e.key === "Enter") refreshAll(); });
+refreshAll();
+setInterval(refreshAll, 60000);
 </script>
-</body></html>
+
+</body>
+</html>
