--- a/index.html
+++ b/index.html
@@ -144,6 +144,8 @@
     refresh();
     setInterval(refresh, 5000);
   </script>
+ <script src="./zz-predictor.js" defer></script>
+ 
 </body><!-- === 풀세트: 8%+ 상승예측 패널 (검색란 아래 자동 부착) === -->
 <style>
   .zz-predictor{font-family:system-ui,AppleSDGothicNeo,"Apple SD Gothic Neo",Segoe UI,Roboto,Pretendard,sans-serif;margin-top:12px}
