--- a/index.html
+++ b/index.html
@@ -1,314 +1,76 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>사토시의지갑 (업비트 전용)</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>사토시의지갑 - 업비트 실시간 시세</title>
   <style>
-    :root { color-scheme: dark; }
-    body { margin:0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Apple SD Gothic Neo, "Noto Sans KR", sans-serif; background:#0b0f12; color:#e6e6e6; }
-    .wrap { max-width:1080px; margin:40px auto; padding:0 16px; }
-    h1 { font-size:28px; margin:0 0 18px; color:#9cc3ff; }
-    .row { display:flex; gap:8px; align-items:center; margin-bottom:12px; }
-    .btn { padding:8px 12px; background:#19324d; border:1px solid #2a4d75; color:#d9eaff; border-radius:8px; cursor:pointer; }
-    .btn:hover { filter:brightness(1.1); }
-    input[type="text"] { flex:1; padding:10px 12px; border-radius:8px; border:1px solid #23303b; background:#0d141a; color:#e8e8e8; }
-    .grid { display:grid; grid-template-columns:repeat(10, minmax(0,1fr)); gap:4px; font-size:14px; border:1px solid #1f2a33; background:#0c1318; border-radius:10px; overflow:hidden; }
-    .cell { padding:10px 8px; border-top:1px solid #10181f; border-left:1px solid #10181f; text-align:center; }
-    .head { background:#0f1a22; font-weight:600; }
-    .boxTitle { font-size:15px; margin:20px 0 8px; color:#b6c9ff; }
-    ul { margin:4px 0 0 0; padding-left:18px; }
-    #signalBox { display:none; margin:16px 0 8px; }
-    .cards { display:flex; gap:10px; flex-wrap:wrap; }
-    .card { padding:10px 12px; border-radius:10px; border:1px solid #24323d; background:#0e161c; }
-    .card.buy { background:#0f1a12; border-color:#1b3a2f; }
-    .card.sell { background:#1b1320; border-color:#3a2548; }
-    .card.stop { background:#211313; border-color:#4a2626; }
-    .card .t { opacity:.7; font-size:12px; margin-bottom:6px; }
-    .card .v { font-weight:700; font-size:18px; }
-    .muted { opacity:.7; font-size:12px; }
-    @media (max-width: 720px) { .grid { font-size:13px; } }
+    body {
+      font-family: Pretendard, system-ui, sans-serif;
+      background: #f9fafb;
+      padding: 20px;
+      color: #111;
+    }
+    h1 {
+      text-align: center;
+      color: #0ea5e9;
+    }
+    #upbit-price-box {
+      max-width: 480px;
+      margin: 30px auto;
+      padding: 16px;
+      border-radius: 12px;
+      background: white;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.08);
+      font-size: 15px;
+      line-height: 1.8;
+    }
+    .coin-line {
+      display: flex;
+      justify-content: space-between;
+      border-bottom: 1px solid #f3f4f6;
+      padding: 6px 0;
+    }
+    .coin-line:last-child {
+      border-bottom: none;
+    }
   </style>
 </head>
 <body>
-  <div class="wrap">
-    <h1>사토시의지갑 (업비트 전용)</h1>
 
-    <div class="row">
-      <input id="q" type="text" placeholder="코인명/심볼 (예: BTC 또는 KRW-BTC)" />
-      <button id="btn-search" class="btn">검색</button>
-    </div>
+  <h1>💰 사토시의지갑</h1>
+  <p style="text-align:center;color:#555">업비트 실시간 시세 연결 테스트</p>
 
-    <!-- 요약 타점 -->
-    <div id="signalBox">
-      <div class="cards">
-        <div class="card"><div class="t">기준가</div><div id="p-base" class="v">-</div></div>
-        <div class="card buy"><div class="t">매수1 (-1.5%)</div><div id="p-buy1" class="v">-</div></div>
-        <div class="card buy"><div class="t">매수2 (-2.5%)</div><div id="p-buy2" class="v">-</div></div>
-        <div class="card sell"><div class="t">매도1 (+1.5%)</div><div id="p-sell1" class="v">-</div></div>
-        <div class="card sell"><div class="t">매도2 (+3%)</div><div id="p-sell2" class="v">-</div></div>
-        <div class="card stop"><div class="t">손절 (-3.5%)</div><div id="p-stop" class="v">-</div></div>
-      </div>
-      <div id="p-symbol" class="muted" style="margin-top:6px;"></div>
-    </div>
-
-    <!-- 급등 리스트 -->
-    <div class="boxTitle">실시간 급등 (업비트)</div>
-    <ul id="upbit-top"></ul>
+  <!-- 실시간 시세 영역 -->
+  <div id="upbit-price-box">
+    불러오는 중...
   </div>
 
-  <script>
-    const fmt = n => Number(n).toLocaleString("ko-KR");
-    const $q = document.getElementById('q');
-    const $btnSearch = document.getElementById('btn-search');
-    const $box = document.getElementById('signalBox');
-    const $sym = document.getElementById('p-symbol');
-    const $base = document.getElementById('p-base');
-    const $b1 = document.getElementById('p-buy1');
-    const $b2 = document.getElementById('p-buy2');
-    const $s1 = document.getElementById('p-sell1');
-    const $s2 = document.getElementById('p-sell2');
-    const $st = document.getElementById('p-stop');
-    const $list = document.getElementById('upbit-top');
+  <!-- 업비트 실시간 연결 코드 -->
+  <script type="module">
+    import { getUpbitPrice } from "./api/upbit.js";
 
-    async function getUpbit() {
-      const r = await fetch('/api/upbit', { cache:'no-store' });
-      if (!r.ok) throw new Error('UPBIT ' + r.status);
-      return r.json();
-    }
-
-    function renderTop($ul, items) {
-      $ul.innerHTML = '';
-      if (!items?.length) {
-        $ul.innerHTML = `<li>- 데이터 없음</li>`;
-        return;
-      }
-      const top = [...items]
-        .sort((a,b)=>(Number(b.changePct)||0)-(Number(a.changePct)||0))
-        .slice(0, 30);
-      for (const x of top) {
-        const name = x.name || x.symbol || '-';
-        const pct = Number(x.changePct||0).toFixed(2);
-        const li = document.createElement('li');
-        li.innerHTML = `${name} <span class="muted">+${pct}%</span>`;
-        $ul.appendChild(li);
+    async function updateAll() {
+      const coins = ["KRW-BTC", "KRW-ETH", "KRW-DOGE", "KRW-AERGO"];
+      const box = document.getElementById("upbit-price-box");
+      box.innerHTML = "";
+      for (const c of coins) {
+        const price = await getUpbitPrice(c);
+        const name = c.replace("KRW-", "");
+        const line = `
+          <div class="coin-line">
+            <span>💎 ${name}</span>
+            <b>${price ? price.toLocaleString("ko-KR") + " 원" : "불러오기 실패"}</b>
+          </div>
+        `;
+        box.innerHTML += line;
       }
     }
 
-    function renderSignal(coin) {
-      if (!coin) { $box.style.display='none'; return; }
-      const price = Number(coin.price || coin.close || 0);
-      if (!price) { $box.style.display='none'; return; }
-
-      const buy1  = (price * 0.985).toFixed(1);
-      const buy2  = (price * 0.975).toFixed(1);
-      const sell1 = (price * 1.015).toFixed(1);
-      const sell2 = (price * 1.03 ).toFixed(1);
-      const stop  = (price * 0.965).toFixed(1);
-
-      $base.textContent = fmt(price);
-      $b1.textContent = fmt(buy1);
-      $b2.textContent = fmt(buy2);
-      $s1.textContent = fmt(sell1);
-      $s2.textContent = fmt(sell2);
-      $st.textContent = fmt(stop);
-      $sym.textContent = `${coin.name || coin.symbol || '-'} · 업비트`;
-      $box.style.display = 'block';
-    }
-
-    function pick(items, keyword) {
-      if (!items?.length) return null;
-      const kw = (keyword||'').trim().toUpperCase();
-      if (!kw) return items[0];
-      return items.find(x => {
-        const n = (x.name||'').toUpperCase();
-        const s = (x.symbol||'').toUpperCase();
-        return n.includes(kw) || s.includes(kw);
-      }) || items[0];
-    }
-
-    async function refresh() {
-      try {
-        const up = await getUpbit();
-        renderTop($list, up.items);
-        renderSignal(pick(up.items, $q.value));
-      } catch (e) {
-        $list.innerHTML = '<li>- 업비트 데이터 없음</li>';
-        $box.style.display='none';
-      }
-    }
-
-    $btnSearch.addEventListener('click', refresh);
-    $q.addEventListener('keydown', e=>{ if (e.key==='Enter') refresh(); });
-
-    refresh();
-    setInterval(refresh, 5000);
+    // 처음 실행 + 3초마다 갱신
+    updateAll();
+    setInterval(updateAll, 3000);
   </script>
- <script src="./zz-predictor.js" defer></script>
- 
-</body><!-- === 풀세트: 8%+ 상승예측 패널 (검색란 아래 자동 부착) === -->
-<style>
-  .zz-predictor{font-family:system-ui,AppleSDGothicNeo,"Apple SD Gothic Neo",Segoe UI,Roboto,Pretendard,sans-serif;margin-top:12px}
-  .zz-card{border:1px solid #e5e7eb;border-radius:12px;padding:12px;background:#fff;box-shadow:0 2px 8px rgba(0,0,0,.04)}
-  .zz-title{font-weight:700;font-size:14px;margin:0 0 8px}
-  .zz-sub{font-size:12px;color:#6b7280;margin:2px 0 10px}
-  .zz-table{width:100%;border-collapse:collapse;font-size:12px}
-  .zz-table th,.zz-table td{padding:8px;border-bottom:1px solid #f1f5f9;text-align:right;white-space:nowrap}
-  .zz-table th:nth-child(1),.zz-table td:nth-child(1){text-align:left}
-  .zz-chip{display:inline-block;padding:2px 8px;border-radius:9999px;font-size:11px}
-  .zz-chip.low{background:#ecfeff;color:#0e7490}
-  .zz-chip.mid{background:#fef9c3;color:#a16207}
-  .zz-chip.high{background:#fee2e2;color:#b91c1c}
-  .zz-badge{font-size:10px;color:#64748b;margin-left:6px}
-  .zz-empty{padding:12px;color:#94a3b8}
-</style>
 
-<script>
-(function(){
-  // 1) 검색창 비슷한 요소 자동 탐색
-  function findSearchEl(){
-    const sel=[
-      '#search','#searchBox','#search-area','#searchbar','input[type="search"]',
-      '.search','.search-box','.searchbar','[data-role="search"]'
-    ];
-    for(const s of sel){
-      const el=document.querySelector(s);
-      if(el) return el.closest('.search')||el.parentElement||el; // 부모 래퍼 우선
-    }
-    return null;
-  }
-
-  // 2) 패널 DOM 생성
-  function createPanel(){
-    const wrap=document.createElement('div');
-    wrap.className='zz-predictor';
-    wrap.innerHTML=`
-      <div class="zz-card">
-        <div style="display:flex;align-items:center;justify-content:space-between;gap:8px;flex-wrap:wrap">
-          <p class="zz-title">📈 8%+ 상승 예상 코인 (TOP 10)</p>
-          <span class="zz-badge" id="zz-lastts"></span>
-        </div>
-        <p class="zz-sub">풀세트(∞) 예측 알고리즘: 세력매집·변동성(ATR/HV)·기술신호(RSI/MACD)·거래량 증가율 종합</p>
-        <div id="zz-tablewrap"></div>
-      </div>
-    `;
-    return wrap;
-  }
-
-  // 3) 위험도 뱃지
-  function riskChip(r){
-    if(r<=2) return '<span class="zz-chip low">위험도 1–2 (낮음)</span>';
-    if(r==3) return '<span class="zz-chip mid">위험도 3 (보통)</span>';
-    return '<span class="zz-chip high">위험도 4–5 (높음)</span>';
-  }
-
-  // 4) 표 렌더
-  function renderTable(rows){
-    const host=document.getElementById('zz-tablewrap');
-    const ts=document.getElementById('zz-lastts');
-    if(!host) return;
-
-    ts.textContent='KST 업데이트: ' + new Date().toLocaleString('ko-KR', { hour12:false });
-
-    if(!rows || rows.length===0){
-      host.innerHTML = `<div class="zz-empty">현재 예측 후보가 없습니다. (데이터 대기)</div>`;
-      return;
-    }
-    // 정렬: 예측상승률 desc -> 급등확률 desc
-    rows = rows.slice().sort((a,b)=>(b.predPct-a.predPct) || (b.prob-a.prob)).slice(0,10);
-
-    const html = `
-      <table class="zz-table">
-        <thead>
-          <tr>
-            <th>코인(한글)</th>
-            <th>예측상승률</th>
-            <th>급등확률</th>
-            <th>위험도</th>
-            <th>근거(요약)</th>
-          </tr>
-        </thead>
-        <tbody>
-          ${rows.map(r=>`
-            <tr>
-              <td>${r.nameKR} <span class="zz-badge">${r.symbol}</span></td>
-              <td>${(r.predPct).toFixed(1)}%</td>
-              <td>${(r.prob).toFixed(0)}%</td>
-              <td>${riskChip(r.risk)}</td>
-              <td>${r.signalNote||''}</td>
-            </tr>
-          `).join('')}
-        </tbody>
-      </table>
-    `;
-    host.innerHTML = html;
-  }
-
-  // 5) 간단한 스코어러 (데모용): 실데이터 연결 전 기본 로직
-  function scoreRow(x){
-    // x: {rsi, macdUp, volUp, obvSlope, atrBand, cvdUp}
-    let s=0, note=[];
-    if(x.macdUp){ s+=2; note.push('MACD↑'); }
-    if(x.rsi && x.rsi>52 && x.rsi<75){ s+=2; note.push('RSI 상승'); }
-    if(x.volUp && x.volUp>1.5){ s+=1.5; note.push('거래량↑'); }
-    if(x.obvSlope && x.obvSlope>0){ s+=1.5; note.push('OBV↑'); }
-    if(x.cvdUp){ s+=1; note.push('CVD↑'); }
-    if(x.atrBand && x.atrBand>0.6){ s+=1; note.push('변동성 에너지'); }
-    // 예측 상승률 & 확률 산출(경험식)
-    const predPct = Math.min(25, 4 + s*2.2 + (x.volUp? Math.min(6, (x.volUp-1)*3):0));
-    const prob = Math.max(50, Math.min(95, 55 + s*6));
-    // 위험도: 변동성 높거나 거래량 급증이면 상승하되 리스크↑
-    const risk = (x.atrBand>0.9 || (x.volUp && x.volUp>2.5)) ? 4 : (x.rsi>72 ? 3 : 2);
-    return {predPct, prob, risk, note: note.join(' / ')};
-  }
-
-  // 6) 외부에서 데이터 공급하는 진입점
-  // window.ZZPredictor.update([{nameKR:'이더리움', symbol:'ETH/KRW', rsi:58, macdUp:true, volUp:1.8, obvSlope:0.7, atrBand:0.5, cvdUp:true}, ...])
-  window.ZZPredictor = {
-    update: function(items){
-      if(!Array.isArray(items)) return renderTable([]);
-      const rows = items.map(c=>{
-        const s = scoreRow(c);
-        return {
-          nameKR: c.nameKR || c.symbol || '코인',
-          symbol: c.symbol || '',
-          predPct: s.predPct,
-          prob: s.prob,
-          risk: s.risk,
-          signalNote: s.note
-        };
-      });
-      renderTable(rows);
-    }
-  };
-
-  // 7) 붙이기: 검색창 아래에 패널 추가
-  function mount(){
-    const target = findSearchEl();
-    const panel = createPanel();
-    if(target && target.parentNode){
-      target.parentNode.insertBefore(panel, target.nextSibling);
-    }else{
-      // 검색창을 못 찾으면 페이지 맨 위에라도 표시
-      document.body.prepend(panel);
-    }
-
-    // 데모 데이터(보이면 정상): 실데이터 연결 전 확인용
-    window.ZZPredictor.update([
-      {nameKR:'이더리움', symbol:'ETH/KRW', rsi:59, macdUp:true, volUp:1.7, obvSlope:0.9, atrBand:0.6, cvdUp:true},
-      {nameKR:'셀로', symbol:'CELO/KRW', rsi:63, macdUp:true, volUp:2.3, obvSlope:0.5, atrBand:0.8, cvdUp:true},
-      {nameKR:'에어고', symbol:'AERGO/KRW', rsi:55, macdUp:true, volUp:1.6, obvSlope:0.4, atrBand:0.5, cvdUp:false}
-    ]);
-  }
-
-  // DOM 로드 후 실행
-  if(document.readyState==='loading'){
-    document.addEventListener('DOMContentLoaded', mount);
-  }else{
-    mount();
-  }
-})();
-</script>
-<!-- === /풀세트 예측 패널 === -->
-
+</body>
 </html>
