--- a/index.html
+++ b/index.html
@@ -302,3 +302,4 @@ import { getUpbitPrice } from "./api/upbit.js";
 <!-- ===== /ZZE block ===== -->
 
 </html>
+<script type="module" src="./zze-bundle.js"></script>
