--- a/index.html
+++ b/index.html
@@ -28,5 +28,7 @@
 
   <!-- 스크립트 -->
   <script type="module" src="/zz-predictor.js"></script>
+<script type="module" src="./js/main.js"></script>
+
 </body>
 </html>
