--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       <input id="search" type="text" placeholder="코인명을 입력하세요 (예: 비트코인)" />
       <button id="search-btn">검색</button>
     </div>
+    
+<button id="scan-btn" class="ghost">예열 스캔(+8% 이상)</button>
 
     <table id="coin-table">
       <thead>
